--- a/LaTeX/ZusammenfassungAusblick.tex
+++ b/LaTeX/ZusammenfassungAusblick.tex
@@ -10,3 +10,9 @@
 \chapter{Summary and Outlook}
 The coloring process of the dental crowns based on the Zirconia ceramics is a necessity because of the plain white appearance of the material with a 49\% translucency. The coloring process is realized through utilization of the metal-ionic inks. The sintering procedure binds the ceramic powder to provide a dental material with a high structural strength and also generates the color via oxidizing the metal-ionic at temperatures about 1200\textdegree C. Depending on the type of the ink classified by the groups of A, B, C and D, the color is defined and the concentration of the applied color determines the shade of the application area. Since the coloring process of the dental zirconia is not a two dimensional paint application process, but a 3 dimensional ink distribution problematic, due to the depth dependent luminescence of the dental problems, the digitalization of the procedure is not as simple as it is for a desktop printer. 
 
+If the subject is approached from the perspective of the current state of the technology and research, it can be said that the coloring process is a complete manual procedure. The ink is applied on the surface by the dental technologist via a brush. The printing of the zirconia with a dental ink utilizing microdrops is an uncharted area, but there is a good amount of research conducted in the fields of microdrop generation and absorption behavior of porous materials. Conclusive experiments are done by Starov at el. to formulate the absorption time and spreading distance of a deployed single ink drop, which have constructed the backbone of the mathematical aspect of this thesis.
+
+Utilizing a 5 axis router, the drop deployment procedure is automated. As color reservoirs 4 ink bottles with the highest saturation level are used with a brightener to achieve the shades of each color. The system is utilized to conduct some experiments to develop a model for the printing process. Ink and ceramic properties like the ink viscosities and surface tensions are obtained, as well as the ceramic porosity. The most optimum drop volume is found out to be 25 $\mu$m. Printing experiments up to a distance of 20mm are proven to possess no significant quality variance. The results of the experiments to determine  the optimum trace distance, proximity effect and brightener to shade ratio for target color acquisition are yet to be analyzed in order to generate a model for the automated printing process. 
+
+In conclusion a model can be generated utilizing the point spread function analysis and optical dot gain phenomena in association, in order to predestine the perceived color at the end. The whole model is developed considering a two dimensional printing material. However, the dental crown possesses a three dimensional object and the distribution of the ink is not quite exact to the distribution of the ink inside a two dimensional material. An optimization of the model for the curved surfaces of the crown can be advantageous, in order to acquire more accurate results.
+
