--- a/LaTeX/eigeneransatz.tex
+++ b/LaTeX/eigeneransatz.tex
@@ -244,7 +244,7 @@ The halftone tonality is greatly affected by optical dot gain, a phenomena cause
 
 In words of a less complexity, the generated drops do not act as if they have definitive borders. In the contrary, the ink concentration decreases in the distal direction in a point symmetrical Gaussian distribution form. Because of that one can not simply measure the diameter of a drop with direct comparison methods. Point Spread Function is used to define the distribution of the observed color depending on the distribution of the ink taking also the optical dot gain in consideration.
 
-The Drops are expected to have a high color intensity in the middle That middle point is going to be the center of the Gaussian distribution.The points with an equal distance from the middle are supposed to present a point symmetrically identical color intensity.
+The drops are expected to have a high color intensity in the middle That middle point is going to be the center of the Gaussian distribution.The points with an equal distance from the middle are supposed to present a point symmetrically identical color intensity.
 
 \bigskip
 
@@ -257,3 +257,6 @@ The Drops are expected to have a high color intensity in the middle That middle 
 
 \bigskip
 
+In order to inspect the Gaussian distributions of ink in cases of different total ink amounts and different drop sizes 8 spots are printed using drops with volumes of 25 nL and 50 nL. The total ink volumes for the spots on each plate are identical and equal to 200 nL, 400nL, 800nL, 1200 nL, 1600 nL, 2000 nL, 2400 nL and 2800 nL.
+
+The results of this experiment are necessary for the reverse calculation of the required ink amount. Depending on the calculations a map can be generated for the amount of drops and target positions to deploy these drop, in order to acquire a desired shade distribution as an outcome.   
