--- a/LaTeX/eigeneransatz.tex
+++ b/LaTeX/eigeneransatz.tex
@@ -146,7 +146,7 @@ Arrhenius-Andrade-Relation defines the viscosity of any Newtonian fluid dependin
 
 The exponential reduction of the viscosity  versus the proportional decrease of the surface tension would be expected to result with a cumulative decrease of the absorption time with climbing temperatures.
 
-Single drops with a volume of 100 nL are deployed on the sawn and milled surfaces. The time between the landing and complete absorption was measured 4 times for each surface structure at the temperatures 20\textdegree C, 30\textdegree C, 40\textdegree C, 60\textdegree C and 80\textdegree C.
+Single drops with a volume of 100 nL are deployed on the sawn and milled surfaces. The time between the landing and complete absorption was measured 4 times for each surface structure at the temperatures 20\textdegree \space C, 30\textdegree \space C, 40\textdegree \space C, 60\textdegree \space C and 80\textdegree \space C.
 
 \bigskip
 
@@ -159,7 +159,7 @@ Single drops with a volume of 100 nL are deployed on the sawn and milled surface
 
 \bigskip
 
-Analyzing the collected measurements, it can be concluded that a 60\textdegree C increase of the zirconia plate leads to about 50\% reduction of the absorption time. These values are to be employed for a curve fitting to be implemented to the shade model at the final stage of the thesis.
+Analyzing the collected measurements, it can be concluded that a 60\textdegree \space C increase of the zirconia plate leads to about 50\% reduction of the absorption time. These values are to be employed for a curve fitting to be implemented to the shade model at the final stage of the thesis.
  
 \section{Drop Size Selection}
 The purpose of the third experiment is deciding for an adequate drop size.A larger drop size results in shorter print duration. However they also tend to expand the spot area more compared to the smaller drops,even though the porous material is not close to being saturated, which is a serious problem for the resolution. Depending on the drop size the drop generation method is to be selected. 
@@ -217,29 +217,42 @@ A pattern with varying distance between two lines and another pattern with varyi
 
 Observing the Figure \ref{fig:prepostV}, one can qualitatively conclude, that the proximity has a significant effect on the coloring behavior. More than a half of the pattern seems to be one thick line on the left side of the postsintering graph in contrary to the lines recognized in the presintering analysis graph. 
 
-The second pattern with the varying ink intensity contains a flaw. The lower line is weaker in the middle because of a contamination with finger oil, which happened before the printing process. Nevertheless, the experiment was proceeded in order to observe, how seriously the printing process is affected by a slight finger oil contamination. The result shows a serious fluctuation in the acquired color which is as high as two shades. However, the purpose of the experiment was to define the optimum trace distance for various ink intensities. The result of the first pattern is to be utilized to confirm the integrity of the results of the second pattern. The ink distribution on the line, where the distance between the two lines is 5 mm in the first pattern, should be the same with the ink distribution on the line where the ink intensity is 1250 nl/mm. If the results comply with each other, the optimum trace distance for any ink intensity can be calculated.
+The second pattern with the varying ink intensity contains a flaw. The lower line is weaker in the middle because of a contamination with finger oil, which happened before the printing process. Nevertheless, the experiment was proceeded in order to observe, how seriously the printing process is affected by a slight finger oil contamination. The result shows a serious fluctuation in the acquired color which is as high as two shades. However, the purpose of the experiment was to define the optimum trace distance for various ink intensities. The result of the first pattern is to be utilized to confirm the integrity of the results of the second pattern. The ink distribution on the line, where the distance between the two lines is 5 mm in the first pattern (magenta line in the Figure \ref{fig:vmatch}), should be the same with the ink distribution along the red line on the second pattern in the Figure \ref{fig:vmatch}) where the ink intensity is 1250 nl/mm. If the results comply with each other, the optimum trace distance for any ink intensity can be calculated.
+
+\bigskip
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=1\textwidth]{grafiken/vmatch.eps}
+	\caption{Comparison of two profiles belonging to imprints with identical parameters}
+	\label{fig:vmatch}
+\end{figure} 
+
+\bigskip
+
 
 
 \bigskip
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=1\textwidth]{grafiken/vProfile.jpg}
+	\includegraphics[width=1\textwidth]{grafiken/vProfile.eps}
 	\caption{Profiles of color intensity depending on the distance on the left and depending on the ink amount on the right}
 	\label{fig:vProfile}
 \end{figure} 
 
 \bigskip
 
-The plots to analyze the ink distribution are presented with two columns in the Figure \ref{fig:vProfile}. The column on the left side presents  8  equidistant positions on the varying distance pattern which are marked with eight red vertical lines and the right column contains the cross section of the pattern on the right side with varying ink intensity. The The pattern on the left shows that a necking appears already with a distance of 3 mm when the printing intensity is equal to 1250 nl/mm. 
+The plots to analyze the ink distribution are presented separately in two columns in the Figure \ref{fig:vProfile}. The column on the left side presents 8 equidistant positions on the varying distance pattern which are marked with eight red vertical lines and the right column contains the cross section of the pattern on the right side with varying ink intensities. The pattern on the left shows that a necking appears already with a distance of 3 mm when the printing intensity is equal to 1250 nl/mm. In other words, printing with a trace distance higher than 3 mm result with an unwanted brighter stripe in the middle of printing traces. Whereas, a trace distance lower than 3mm cannot result with a more saturated color but a higher diffusion range or a thicker single line. 
 
+This data acquired from the first pattern was planned to be matched with the data from the section with the ink intensity of 1250 nl/mm on the second pattern but the extreme irregularity levels of diffusion in the x direction make the data acquired from the second pattern quite useless. The lateral diffusion amount on the right side of the second pattern is definitely higher than the left side as observed in the lower plots of the Figure \ref{fig:vmatch}. Not to mention a direct match and acquisition approach, it is even not possible to calibrate the data on the second pattern to conduct trace distance calculations, because of the nonlinear lateral ink distribution inside the material.
 
 
 
 \section{Printing angle}
 The dental crowns do not always present convex features. The chewing surface can rarely possess even some under cut geometries. In such cases it is not possible for a droplet to land on the zirconia surface vertically and for some known areas, the printing process has to be conducted on skew surfaces. 
 
-If the lateral momentum of the droplet are high enough at moment of the impact on the surface, the printed pattern can look like it has a motion blur effect. It is also possible that the resolution gets lower because of the lateral flow of the drops on the surface. There has to be some critical angle, at which such disadvantages become inevitably  significant. The maximum milling angle used for the dental crowns is declared by Bredent GmbH to be 30\textdegree. So, an experiment to test the effects of printing on a skew surface up to an angle of 45\textdegree is supposed to be comprehensive enough.
+If the lateral momentum of the droplet are high enough at moment of the impact on the surface, the printed pattern can look like it has a motion blur effect. It is also possible that the resolution gets lower because of the lateral flow of the drops on the surface. There has to be some critical angle, at which such disadvantages become inevitably  significant. The maximum milling angle used for the dental crowns is declared by Bredent GmbH to be 30\textdegree \space. So, an experiment to test the effects of printing on a skew surface up to an angle of 45\textdegree \space is supposed to be comprehensive enough.
 
 	\bigskip
 
@@ -252,8 +265,9 @@ If the lateral momentum of the droplet are high enough at moment of the impact o
 
 	\bigskip
 
-In order to test the effect of printing on a skew surface to parallel lines are printed on the surface which have a distance of 4mm 4 times, while the zirconia specimen was standing at angles 0\textdegree, 15\textdegree, 30\textdegree and 45\textdegree. The printed sample can be seen in the figure \ref{fig:angleprint}
-The lines were generated using 25 nL droplets with a drop density of 50 drops per mm.
+In order to test the effect of printing on a skew surface to parallel lines are printed on the surface which have a distance of 4mm 4 times, while the zirconia specimen was standing at angles 0\textdegree \space, 15\textdegree \space, 30\textdegree \space and 45\textdegree \space. The printed sample can be seen in the Figure \ref{fig:angleprint}. 30\textdegree \space is defined by the dental techologists from the Bredent GmbH. as the highest possible printing angle that could be required because of the parameters of the milling process. The maximum milling angle for the inner features of the crown is realized by a CNC with a machine tool angle of 30\textdegree \space to the crown axis. So the extension of the experiments up to a printing angle of 45\textdegree \space is slightly off the limits but necessary to be on the safe side.
+
+The lines were generated using 25 nL droplets with a drop density of 50 drops per mm. The thickness of the lines are measured as 2.2 $\pm$ 0.1 mm. This measurement of 2.2 mm on the specimen belong to the blue lines, which present the contact area on the zirconia with the ink. 2.2 mm is not the thickness of the line after the sintering process. The consistency of the thickness at all angles is enough for the observer to conclude the result that the printing angles up to 45\textdegree \space do not cause any significant change in the printed pattern. If the contact surface is the same for all printing angles, the possibility of observing different line properties after the sintering process is quite close to zero.
 
 \section{Point Spread Function}
 
@@ -284,8 +298,8 @@ The results of this experiment are necessary for the reverse calculation of the 
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=0.8\textwidth]{grafiken/drops25.jpg}
-	\caption{Comparison of the spot area results depending on the drop size}
+	\includegraphics[width=0.8\textwidth]{grafiken/drops25.eps}
+	\caption{False color representation and shade spreading analysis of the spots after sintering (printed with 25 nL drops)}
 	\label{fig:drops25}
 \end{figure} 
 
@@ -295,8 +309,8 @@ The results of this experiment are necessary for the reverse calculation of the 
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=0.8\textwidth]{grafiken/drops50.jpg}
-	\caption{Comparison of the spot area results depending on the drop size}
+	\includegraphics[width=0.8\textwidth]{grafiken/drops50.eps}
+	\caption{False color representation and shade spreading analysis of the spots after sintering (printed with 50 nL drops)}
 	\label{fig:drops50}
 \end{figure} 
 
