--- a/LaTeX/deckblatt.tex
+++ b/LaTeX/deckblatt.tex
@@ -17,7 +17,7 @@
 
 \begin{center}
 \begin{singlespace}
-\small Technical University Munich\smallskip\\
+\small Technical University of Munich\smallskip\\
 Department of Mechanical Engineering\smallskip\\
 Institute of Micro Technology and Medical Device Technology\smallskip\\
 Univ.-Prof. Dr. Tim C. Lüth
