--- a/LaTeX/eigeneransatz.tex
+++ b/LaTeX/eigeneransatz.tex
@@ -113,7 +113,7 @@ For a dental technician it is completely trivial how viscous the ink is but for 
 
 The most important outcome of this experiment is high values of viscosity observed for the inks, in comparison to water. This situation provides numerous advantages for the drop generation part of the process. The higher viscosity of the ink helps reduce the occurrence of the satellite drops.
 \begin{comment}
- \section{Ink Concentration vs. shade without Lateral Flow}
+ \section{Ink Concentration vs. Shade without Lateral Flow}
 
 The dental colors appearing after the sintering process have to be assigned to specific ink concentrations. When a pattern is printed on the zirconia surface a part of the ink deployed on the target area escapes the region where t is supposed to be through lateral diffusion in the pores of the material. That is the reason one observes a spread distribution of color intensity. This can be inhibited if the whole material is printed with the same amount of ink to assure a homogeneous color intensity throughout the whole surface to obtain the theoretically achievable shades without the influence of lateral diffusions inside the material.
 
@@ -249,7 +249,7 @@ This data acquired from the first pattern was planned to be matched with the dat
 
 
 
-\section{Printing angle}
+\section{Printing Angle}
 The dental crowns do not always present convex features. The chewing surface can rarely possess even some under cut geometries. In such cases it is not possible for a droplet to land on the zirconia surface vertically and for some known areas, the printing process has to be conducted on skew surfaces. 
 
 If the lateral momentum of the droplet are high enough at moment of the impact on the surface, the printed pattern can look like it has a motion blur effect. It is also possible that the resolution gets lower because of the lateral flow of the drops on the surface. There has to be some critical angle, at which such disadvantages become inevitably  significant. The maximum milling angle used for the dental crowns is declared by Bredent GmbH to be 30\textdegree \space. So, an experiment to test the effects of printing on a skew surface up to an angle of 45\textdegree \space is supposed to be comprehensive enough.
@@ -267,15 +267,11 @@ If the lateral momentum of the droplet are high enough at moment of the impact o
 
 In order to test the effect of printing on a skew surface to parallel lines are printed on the surface which have a distance of 4mm 4 times, while the zirconia specimen was standing at angles 0\textdegree \space, 15\textdegree \space, 30\textdegree \space and 45\textdegree \space. The printed sample can be seen in the Figure \ref{fig:angleprint}. 30\textdegree \space is defined by the dental techologists from the Bredent GmbH. as the highest possible printing angle that could be required because of the parameters of the milling process. The maximum milling angle for the inner features of the crown is realized by a CNC with a machine tool angle of 30\textdegree \space to the crown axis. So the extension of the experiments up to a printing angle of 45\textdegree \space is slightly off the limits but necessary to be on the safe side.
 
-The lines were generated using 25 nL droplets with a drop density of 50 drops per mm. The thickness of the lines are measured as 2.2 $\pm$ 0.1 mm. This measurement of 2.2 mm on the specimen belong to the blue lines, which present the contact area on the zirconia with the ink. 2.2 mm is not the thickness of the line after the sintering process. The consistency of the thickness at all angles is enough for the observer to conclude the result that the printing angles up to 45\textdegree \space do not cause any significant change in the printed pattern. If the contact surface is the same for all printing angles, the possibility of observing different line properties after the sintering process is quite close to zero.
+The lines were generated using 25 nL droplets with a drop density of 50 drops per mm. The thickness of the lines are measured as 2.2 $\pm$ 0.1 mm. This measurement of 2.2 mm on the specimen belong to the blue lines, which present the contact area on the zirconia with the ink. 2.2 mm is not the thickness of the line after the sintering process. The consistency of the thickness at all angles is enough for the observer to conclude the result that the printing angles up to 45\textdegree \space do not cause any significant change in the printed pattern. If the the wetted surface on the zirconia is the same for all printing angles, the possibility of observing different line properties after the sintering process is quite close to zero.
 
-\section{Point Spread Function}
+\section{Singular Spot Characteristics}
 
-
-The halftone tonality is greatly affected by optical dot gain, a phenomena caused by the photon diffusion inside the medium. The point spread function (PSF) is one of the ways to model the optical dot gain. The derivation of an appropriate PSF is accomplished through solving the radiative transfer equation, which leads to a PSF in terms of the scattering and absorption coefficients of the medium. This PSF is then used for calculating the average diffusion distance of the photons inside medium. It is shown in the work of Rogers that the Z-sum, which can be expressed explicitly, can be estimated by $\mu^{-s}$, where $\mu$ is the fractional ink coverage and s has values between 0 and 1.  The interrelationship  between the PSF  approach and the probability approach is proven to be strong. \citep{rogers2015point}
-
-In words of a less complexity, the generated drops do not act as if they have definitive borders. In the contrary, the ink concentration decreases in the distal direction in a point symmetrical Gaussian distribution form. Because of that one can not simply measure the diameter of a drop with direct comparison methods. Point Spread Function is used to define the distribution of the observed color depending on the distribution of the ink taking also the optical dot gain in consideration.
-
+Since the efforts to determine the characteristics via continuous lines did not provide conclusive results because of the ink diffusion in side the porous material, discontinuous, isolated imprints are required as a further experiment. 8 Spots are to be printed with an equidistant placement. The distances between the spots are 8 mm which is beyond the diffusion range of the relative ink amounts. 25 nL drops and 50 nL drops are deployed on two different specimen to observe the effect of the droplet size depending on the total ink volume. 
 The drops are expected to have a high color intensity in the middle That middle point is going to be the center of the Gaussian distribution.The points with an equal distance from the middle are supposed to present a point symmetrically identical color intensity.
 
 \bigskip
