--- a/LaTeX/literatur.bib
+++ b/LaTeX/literatur.bib
@@ -147,3 +147,10 @@
 	year={2002},
 	publisher={Artech house}
 }
+
+@misc{hille,
+	title={ZWP Zahnarzt Wirtschaft Praxis},
+	author={Prof. Hille},
+	year={2013},
+	url={https://epaper.zwp-online.info/epaper/gim/zwp/2013/zwp0113/epaper/ausgabe.pdf}
+}
